# homelab2

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  ROADMAP.md  flake.nix  mkdocs.yml  renovate.json5  requirements.txt  run_nix_develop.sh
.serena/: project.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps/actualbudget/: values.yaml
apps/blog/: values.yaml
apps/excalidraw/: Chart.yaml  values.yaml
apps/homepage/: Chart.yaml  values.yaml
apps/jellyfin/: Chart.yaml  values.yaml
metal/: cluster.yml  k3d-dev.yaml
scripts/: backup  configure  hacks  helm-diff
system/: bootstrap.yml  cm-coredns-custom.yaml.j2
system/kubevirt/tests/: README.md  conftest.py  pyproject.toml  run.py
system/kubevirt/tests/e2e/: test_production_vm.py  test_vm_connectivity.py
system/kubevirt/tests/integration/: test_datavolume.py  test_vm_datavolume.py  test_vm_lifecycle.py  test_vm_service.py  test_vmi_lifecycle.py
system/kubevirt/tests/lib/: __init__.py  common.py  report_generator.py  resource_limiter.py
system/kubevirt/tests/manifests/e2e/: production-vm.yaml
system/kubevirt/tests/manifests/integration/: datavolume-cirros.yaml  vm-cirros.yaml  vm-datavolume.yaml  vm-service.yaml  vmi-ephemeral.yaml
system/kubevirt/tests/manifests/unit/: values-override.yaml
system/kubevirt/tests/unit/: test_helm_template.py  test_report_generator.py
test/: smoke_test.go
(+293 files in other folders)
