[project]
name = "kubevirt-tests"
version = "0.1.0"
description = "KubeVirt 测试体系 — 单元/集成/端到端三层测试"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "kubernetes>=30.0",
    "pexpect>=4.9",
    "rich>=13.0",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["unit", "integration", "e2e"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["lib", "unit", "integration", "e2e"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
